lox-tests/tests/operator/subtract_num_nonnum.stderr
ERROR: Unsupported operation '-' between types 'number' and 'string'
 --> 1:1
  |
1 | 1 - "1"; // expect runtime error: Operands must be numbers.
  | ^-----^
